fix: fix table scrolling and loading issues
- Load Async is built to show loaders for content rendered inside it.
  We are using it in table as a placeholder where the loader wrapper
  stays after the cdk table has loaded all data. This creates lots of
  layout issues especially when using with flex container

- Introducing a new hide property in table loading state to remove the
  loader wrapper once loading is completed. In case of error or no data,
  the loader will automatically take the entire space.

- removing host properties as it interferes with flex properties for parent container

- adding flex grow to explorer table

--- a/projects/components/src/table/table.component.scss
+++ b/projects/components/src/table/table.component.scss
@@ -1,11 +1,12 @@
 @import 'mixins';
 @import 'layout';
 
-:host {
+.table {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
+  position: relative;
 }
 
 .title-row {
@@ -18,6 +19,7 @@
 
 .table {
   width: 100%;
+  flex: 1 1 0;
   overflow: auto;
 }
 
@@ -122,7 +124,10 @@
 }
 
 .state-watcher {
-  flex: 1 1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background: transparent;
 }
 
 .pagination-controls {
